--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -34,7 +34,7 @@ header{
 
     border:solid 1px  #000;
     width: 100%;
-    justify-content: space-between;
+    
     flex-direction: row;
     align-items: center;
     padding: 10px 5%;
@@ -44,6 +44,12 @@ li{
     margin: 25px 20px;
     /*background-color: #b4bec2;*/
     
+}
+.nav{
+    width: 80%;
+    
+    display: flex;
+    justify-content: flex-end;
 }
 .navBarItem{
    
@@ -183,6 +189,7 @@ main{
 }
 
 .container-cards{
+    
     text-align: center;
     width: 100%;
 }
@@ -235,16 +242,16 @@ main{
     font-weight: bold;
 }
 .article-main{
-    width: 100%;
+    
     display: flex;
     justify-content: space-around;
-    gap:30px;
+    
     padding:0 5%;
-    margin: 30px;
+    margin: 40px;
 }
 
 .article-box{
-    width: 33%;
+    width: 25%;
     text-align: left;
     
     border: solid 1px #000;
@@ -264,7 +271,7 @@ main{
 }
 
 .section-apresentacao{
-    width: 100%;
+    width: auto;
     border: solid #000;
     text-align: center;
     background-color: #7e0707d0;
@@ -283,6 +290,12 @@ main{
     margin-bottom: 13px;
     font-size: 3rem;
 }
+.apresentacao-box{
+    width: 40%;
+}
+.apresentacao-box img{
+    width: 60%;
+}
 
 .apresentacao-box p {
     font-size:1.2rem ;
@@ -295,16 +308,16 @@ main{
 
 .apresentacao-div{
     margin: 0 auto;
-    width: 60%;
+    width: auto;
     
     display: flex;
     justify-content: space-around;
-    gap: 30px;
+    
     text-align: center;
 }
 footer{
     display: flex;
-    gap: 200px;
+    
     justify-content: space-around;
     padding: 20px 7%;
 }
@@ -374,7 +387,7 @@ footer icon{
     text-align: center;
   }
 .menu-btn{
-    
+    display: none;
     background: none;
     border:none;
     font-size: 25px;
@@ -383,18 +396,12 @@ footer icon{
 }
 
 
+
+
+
+
+
 @media only screen and (max-width:992px){
-
-}
-
-
-
-@media only screen and (max-width:768px){
-
-}
-
-
-@media only screen and (max-width:600px){
     .menu-btn{
         display: block;
         position: absolute;
@@ -425,5 +432,51 @@ footer icon{
         padding: 15px 20px;
         display: block;
         color: #333;
+    }
+    #banner-text{
+        width: 70%;
+    }
+
+    .article-main{
+        padding: 5px;
+        gap: 10px;
+    }
+    .container-cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .article-main{
+        display: flex;
+        flex-direction: column;
+    }
+    .article-box{
+        width: 90%;
+    }
+    #card-div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+    }
+    #cards-text{
+        width: 100%;
+    }
+    #card-div img{
+        margin: 15px;
+        width: 75%;
+    }
+
+}
+
+
+@media only screen and (max-width:600px){
+    #banner-text{
+        width: 90%;
+        margin:8%;
+    }
+    .article-main{
+        padding: 5px;
+        gap: 10px;
     }
 }
